# PastebinClone

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: items.py
app/application/dto/: item_dto.py  user_dto.py
app/application/services/: item_service.py  text_service.py  user_service.py
app/database/: database.py
app/domain/entities/: item.py  text.py  user.py
app/domain/repositories/: item_repository.py  text_repository.py  user_repository.py
app/infrastructure/cache/: text_cache_service.py
app/infrastructure/database/: database.py  models.py  redis_client.py
app/infrastructure/repositories/: item_repository_impl.py  text_repository.py  user_repository_impl.py
app/infrastructure/storage/: s3_storage_service.py
app/models/: item.py
app/presentation/api/: dependencies.py  item_router.py  text_router.py  user_router.py
app/schemas/: item.py
migrations/: env.py
migrations/versions/: 017da54de552_manual_uuid_conversion.py  2006ba3ac50c_changed_the_name_of_columns_insider_.py  5ee1b1a54109_added_timezone_to_texts_date_columns.py  6205e737aa88_add_timezone_to_expiration_date.py  f7d110ea3338_initial_migration.py
