[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Simplelamer8 <tengekking8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"
sqlalchemy = ">=2.0.41,<3.0.0"
alembic = ">=1.16.1,<2.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pydantic = ">=2.11.5,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
passlib = ">=1.7.4,<2.0.0"
python-jose = ">=3.5.0,<4.0.0"
bcrypt = ">=4.3.0,<5.0.0"
sqlmodel = ">=0.0.24,<0.0.25"
boto3 = ">=1.26.137,<1.27.0"
botocore = ">=1.29.137,<1.30.0"
redis-om = ">=0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
